--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <title>Frontend Mentor | Advice generator app</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,8 +21,8 @@
     <p class="advice">
       “”
     </p>
-    <img src="images/pattern-divider-desktop.svg" alt="">
-    <button><img src="images/icon-dice.svg" alt=""></button>
+    <img src="pattern-divider-desktop.svg" alt="">
+    <button><img src="icon-dice.svg" alt=""></button>
   </main>
   <script src="main.js"></script>
 </body>
